@@ -104,7 +104,7 @@ void handle_sigint(int signal)
 /* Signal handler for SIGUSR1 - backup the db. */
 void handle_sigusr1(int signal)
 {
-	mqtt3_db_backup();
+	mqtt3_db_backup(false);
 }
 
 int main(int argc, char *argv[])
@@ -300,7 +300,7 @@ int main(int argc, char *argv[])
 		}
 		if(config.persistence && config.autosave_interval){
 			if(last_backup + config.autosave_interval < now){
-				mqtt3_db_backup();
+				mqtt3_db_backup(false);
 				last_backup = time(NULL);
 			}
 		}
@@ -327,7 +327,7 @@ int main(int argc, char *argv[])
 	}
 
 	if(config.persistence && config.autosave_interval){
-		mqtt3_db_backup();
+		mqtt3_db_backup(true);
 	}
 	mqtt3_db_close();
 
